package edu.hitsz.enemyfactory;

import edu.hitsz.aircraft.AbstractAircraft;

public interface IEnemyFactory {
    AbstractAircraft create();
}
